tests/paczka1/fuzzy1/39124777.err
Error in line 9: 58SwvHB A901 33,6
Error in line 11: 58SwvHB S237 73,7
Error in line 17: 58SwvHB A252 46,7
Error in line 18: XxS A901 41,6
Error in line 24: favxcaJdAT S237 4,2
Error in line 38: S237 A252 16,0
